[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
alloc = ["capnp/alloc"]
std = ["capnp/std"]

[dependencies]
capnp = { version = "0.18.10", default-features = false, features = ["unaligned"] }

[build-dependencies]
capnpc = "0.18.0"
