[package]
name = "receiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
bytes = "1.5.0"
capnp = "0.18.10"
protocol = { version = "0.1.0", path = "../protocol", features = ["std", "alloc"] }
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "net"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
